# cli-tools-ai

./: .gitignore  Cargo.toml  brain.db  context.txt  output.txt
src/: db.rs  error.rs  main.rs  models.rs
src/brain/: api.rs  error_context.rs  memory.rs  mod.rs
src/commands/: ask.rs  chat.rs  mod.rs
src/processor/: cleaner.rs  mod.rs  scanner.rs  skeleton.rs
